Implemented dice game functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,10 @@
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center"
         android:text="WINNER : Player 1"
-        android:visibility="invisible"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textColor="@color/teal_700"
+        android:visibility="invisible"
         android:textSize="35dp" />
 
     <LinearLayout
